--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 <title>Document</title>
 </head>
 <body>
-  <h1>sflasdfljsflkj</h1>
+  <h1>test</h1>
   <div id="app"></div>
   <script src="./bundle.js"></script>
 </body>
